--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             cursor: pointer;
         }
     </style>
+    <iframe src="https://countingdownto.com/w4/4WtKCEC2" frameborder="0" style="position:fixed;left:0;top:0;margin:0!important;width:100%;height:3.5rem;z-index:1;background-color:#000000;"></iframe> <style>body{padding-top:3.5rem!important;}</style>
 </head>
 <body oncontextmenu="return false;">
     <canvas id="drawingCanvas"></canvas>
